app/css/core/ui-kit/ui-toolkit.scss
.project-ui {
  $ui-container-mah: 700px;
  $ui-header-mah: 64px;
  $ui-aside-maw: 250px;
  $ui-container-gutters: 30px;
  $ui-container-gutters-mobile: #{$ui-container-gutters / 2};

  display: flex;
  width: 100%;
  min-height: 100vh;

  &__container {
    flex: 1 1 100%;
    display: flex;
    margin: auto;
    box-shadow: 0 0 1px rgba(0, 0, 0, 0.5),
    0 20px 30px rgba(0, 0, 0, 0.1),
    0 10px 50px rgba(0, 0, 0, 0.2);

    @include media(tabletSmall) {
      display: block;
      max-height: initial;
      border-radius: unset;
    }
  }

  &__sidebar {
    position: fixed;
    top: 0;
    left: 0;
    z-index: z(aside);
    width: $ui-aside-maw;
    height: 100vh;
    background: rgba(249, 249, 249, 0.7);
    box-shadow: inset 0 1px 2px $color-white-20;
    backdrop-filter: blur(80px);

    @include media(tabletSmall) {
      display: none;
    }

    nav {
      padding: $ui-header-mah 10px;
    }

    a {
      display: block;
      padding: 5px 10px;
      width: 100%;
      font-size: 18px;
      font-weight: 500;
      line-height: 1.3;
      text-align: left;
      border-radius: 4px;

      &:hover {
        background-color: transparentize($color-black, 0.95);
      }
    }
  }

  &__main {
    flex: 1 1 75%;
    padding: $ui-header-mah 0 0 $ui-aside-maw;
    background-color: $color-white;

    @include media(tabletSmall) {
      padding: $ui-header-mah 0 0;
    }
  }

  &__header {
    position: fixed;
    top: 0;
    left: $ui-aside-maw;
    right: 0;
    z-index: z(header);
    padding: 15px $ui-container-gutters;
    border-bottom: 1px solid $color-gray-20;
    background-color: $color-white;

    @include media(tabletSmall) {
      left: 0;
    }

    @include media(mobile) {
      padding: $ui-container-gutters-mobile;
    }
  }

  &__title {
    margin: 0;
    padding: 0;
    font-size: 1.5em;
    line-height: 1.4;
  }

  &__content {
    padding: 0 $ui-container-gutters;
    overflow-y: auto;

    > *:first-child {
      margin-top: 60px;
    }

    > * + * {
      margin: 30px 0;
    }

    @include media(tabletSmall) {
      max-height: initial;
    }

    @include media(mobile) {
      padding: 0 $ui-container-gutters-mobile;
    }
  }

  &__section {
    &-title {
      @include ui-font-title(30px);
    }

    &-content {
      margin-top: 20px;
    }

    &-row {
      margin: -7.5px;

      > * {
        margin: 7.5px;
      }
    }

    ul {
      > * + * {
        margin-top: 30px;
      }
    }
  }

  table {
    width: 100%;
    border-collapse: collapse;

    td {
      padding: 14px 0;
    }
  }

  thead {
    td {
      color: $color-gray-60;
      font-size: 12px;
      font-weight: 400;
      line-height: 1;
    }
  }

  tbody {
    td {
      font-size: 15px;
      line-height: 1;
      border-top: 1px solid $color-gray-40;
      border-bottom: 1px solid $color-gray-40;
    }
  }

  caption {
    padding: 10px 0;
    color: $color-gray-100;
    @include ui-font-title;
    text-align: left;
  }
}

.ui-colors {
  li {
    @include media(mobile) {
      overflow-x: auto;
      max-width: calc(100vw - 30px);
      @include hide-scrollbar;
    }
  }

  table {
    @include media(mobile) {
      min-width: 675px;
    }
  }

  td {
    &:nth-child(1) {
      width: 40%;

      @include media(mobile) {
        width: calc(100vw - 100px);
      }
    }

    &:nth-child(2) {
      width: 20%;

      @include media(mobile) {
        width: 100px;
        text-align: center;
      }
    }

    &:nth-child(3) {
      width: 20%;
    }
  }

  span {
    $ui-t-value: 28px;
    display: inline-block;
    width: $ui-t-value;
    height: $ui-t-value;
    border-radius: 50%;

    &.dark {
      border: 1px solid $color-gray-100;
    }
  }
}

.ui-widgets {
  &__row {
    display: flex;
    flex-wrap: wrap;
    margin: -20px;
  }

  &__cell {
    margin: 20px;
  }

  &__widget {
    border: 1px solid #eee;
    border-radius: 5px;

    &--background {
      .uikit-widget__content {
        background: #eee;
      }
    }
  }

  &__title {
    padding: 5px 10px;
    border-bottom: 1px solid #eee;
    text-align: center;
    display: block;
    font-size: 14px;
    font-style: italic;
  }

  &__content {
    padding: 5px;

    &-inner {
      margin: 5px;
    }
  }
}

